# zfin-orthology-ingest

./: .cruft.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: create-release.yaml
docs/: 404.html  edges_report.tsv  index.html  index.md  objects.inv  sitemap.xml
docs/search/: search_index.json
scripts/: generate-rdf.py  generate-report.py  get-latest-report.py  preprocess.py  preprocess.sql
src/zfin_orthology_ingest/: __init__.py  cli.py  download.yaml  metadata.yaml  transform.py  transform.yaml
tests/: test_transform.py
